--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/microservices": "^11.1.3",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/terminus": "^11.0.0",
     "@openfga/sdk": "^0.9.1",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "6.14.0",
     "@types/cookie-parser": "^1.4.10",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "argon2": "^0.44.0",
@@ -77,6 +78,7 @@
     "keyv": "^5.5.2",
     "libphonenumber-js": "^1.12.23",
     "mailersend": "^2.6.0",
+    "mongoose": "^9.0.0",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "passport-jwt": "^4.0.1",
@@ -117,7 +119,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.14.0",
+    "prisma": "6.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
