--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -42,14 +42,11 @@ jobs:
         env:
           DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/test"
 
-  build-and-deploy:
+  build-and-push:
+    name: Build & Push to Docker Hub
     needs: test-and-validate
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
 
     steps:
       - name: Checkout Code
@@ -58,17 +55,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Docker Image
+      - name: Build and Push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/users/Dockerfile
           push: true
-          tags: ghcr.io/harsh-soe/user-service:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/user-service:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${{ github.sha }}
