fix(ci): correct typo in workflow config

--- a/.github/workflows/user-service.yml
+++ b/.github/workflows/user-service.yml
@@ -50,7 +50,7 @@ jobs:
         run: yarn lint:libs
 
       - name: Run linter (Users Service)
-        run: yarn lint:user
+        run: yarn lint:users
 
   test-and-validate:
     runs-on: ubuntu-latest
