--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api-gateway/main",
+    "lint:libs": "eslint libs --fix",
     "lint:all": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:users": "eslint apps/users --fix",
-    "lint:libs": "eslint libs --fix",
+    "lint:gateway": "eslint apps/api-gateway --fix",
     "lint:channel": "eslint apps/channel --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -87,7 +88,7 @@
     "mailersend": "^2.6.0",
     "mongoose": "^9.0.0",
     "passport": "^0.7.0",
-    "passport-auth0": "^1.4.4",
+    "passport-auth0": "^1.4.5",
     "passport-jwt": "^4.0.1",
     "prom-client": "^15.1.3",
     "redis": "^5.6.1",
