--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:gateway": "eslint apps/api-gateway --fix",
     "lint:channel": "eslint apps/channel --fix",
     "lint:videos": "eslint apps/videos --fix",
+    "lint:query": "eslint apps/query --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
