--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:channel": "eslint apps/channel --fix",
     "lint:videos": "eslint apps/videos --fix",
     "lint:query": "eslint apps/query --fix",
+    "lint:projection": "eslint apps/projection --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
