--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .yarn/patches
 .yarn/sdks
 .yarn/unplugged
+
+# Secrets (must never exist in repo)
+/secrets
+secrets/
