--- a/.github/workflows/users-service.yml
+++ b/.github/workflows/users-service.yml
@@ -31,6 +31,7 @@ jobs:
     uses: ./.github/workflows/template-ci.yml
     with:
       service-name: "users"
+      generate-prisma: true
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
