--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
       "@gateway/*": ["apps/api-gateway/src/*"],
       "@history/*": ["apps/history/src/*"],
       "@persistance/channel": ["apps/channel/generated/prisma"],
-      "@peristance/comments": ["apps/comments/generated/prisma"],
+      "@persistance/comments": ["apps/comments/generated/prisma"],
       "@peristance/reaction": ["apps/reaction/generated/prisma"],
       "@persistance/users": ["apps/users/generated/prisma"],
       "@peristance/videos": ["apps/videos/generated/prisma"],
