--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,11 +45,11 @@
       "@email/*": ["apps/email/src/*"],
       "@gateway/*": ["apps/api-gateway/src/*"],
       "@history/*": ["apps/history/src/*"],
-      "@peristance/channel": ["apps/channel/generated/prisma"],
-      "@peristance/comments": ["apps/comments/generated/prisma"],
-      "@peristance/reaction": ["apps/reaction/generated/prisma"],
+      "@persistance/channel": ["apps/channel/generated/prisma"],
+      "@persistance/comments": ["apps/comments/generated/prisma"],
+      "@persistance/reaction": ["apps/reaction/generated/prisma"],
       "@persistance/users": ["apps/users/generated/prisma"],
-      "@peristance/videos": ["apps/videos/generated/prisma"],
+      "@persistance/videos": ["apps/videos/generated/prisma"],
       "@persistance/auth": ["apps/auth/generated/prisma"],
       "@persistance/views": ["apps/views/generated/prisma"],
       "@playlist/*": ["apps/playlist/src/*"],
