--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "argon2": "^0.44.0",
     "auth0": "^5.0.0",
     "axios": "^1.12.2",
+    "boxen": "^8.0.1",
     "bullmq": "^5.64.1",
     "cache-manager": "^7.2.7",
     "cache-manager-redis-store": "^3.0.1",
@@ -86,6 +87,7 @@
     "libphonenumber-js": "^1.12.23",
     "mailersend": "^2.6.0",
     "mongoose": "^9.0.0",
+    "ora": "^9.0.0",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.5",
     "passport-jwt": "^4.0.1",
