--- a/.github/workflows/template-ci.yml
+++ b/.github/workflows/template-ci.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
       - name: Get the latest code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup node
         uses: actions/setup-node@v4
@@ -63,12 +65,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push to docker hub
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./apps/${{ inputs.service-name }}/Dockerfile
-          push: true
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/streamforge-${{ inputs.service-name }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/streamforge-${{ inputs.service-name }}:${{ github.sha }}
