feat: adds a new startup script

--- a/package.json
+++ b/package.json
@@ -20,15 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/api-gateway/test/jest-e2e.json",
-    "docker:clean:images": "docker image ls -qf dangling=true | xargs -r docker image rm",
-    "docker:clean:volumes": "docker volume ls -qf dangling=true | xargs -r docker volume rm",
-    "docker:clean:cache": "docker builder prune --all -f",
-    "docker:clean": "yarn docker:clean:images && yarn docker:clean:volumes && yarn docker:clean:cache",
-    "app:build:development": "COMPOSE_PARALLEL_LIMIT=2 docker compose -f compose.dev.yml build --parallel && yarn docker:clean && yarn docker:storage",
-    "app:build:production": "COMPOSE_PARALLEL_LIMIT=2 docker compose -f compose.prod.yml build --parallel && yarn docker:clean && yarn docker:storage",
-    "app:start:production": "yarn docker:clean && MODE=production tilt up",
-    "app:start:development": "yarn docker:clean && MODE=development tilt up",
-    "docker:storage": "docker system df",
+    "app:start": "ts-node scripts/startup.ts",
     "prisma:init": "ts-node scripts/init-prisma.script.ts",
     "prisma:generate:client": "ts-node scripts/generate-client.script.ts",
     "prisma:generate:migrations": "ts-node scripts/generate-migrations.script.ts",
@@ -107,6 +99,7 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@inquirer/prompts": "^8.1.0",
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
