chore: fixed scripts and proper env loading for local development

--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/api-gateway/main",
+    "start:all": "ts-node scripts/startup.ts",
     "format": "prettier --write",
     "format:check": "prettier --check",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
+    "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/api-gateway/test/jest-e2e.json",
-    "app:start": "ts-node scripts/startup.ts",
+    "test:e2e": "jest --config jest-e2e.config.json",
     "prisma:init": "ts-node scripts/init-prisma.script.ts",
     "prisma:generate:client": "ts-node scripts/generate-client.script.ts",
     "prisma:generate:migrations": "ts-node scripts/generate-migrations.script.ts",
-    "grpc:generate:proto": "ts-node scripts/generate-prototype.script.ts",
-    "prepare": "husky"
+    "grpc:generate:proto": "ts-node scripts/generate-prototype.script.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.848.0",
