--- a/jest-e2e.config.json
+++ b/jest-e2e.config.json
@@ -3,7 +3,23 @@
   "rootDir": ".",
   "testRegex": "\\.e2e-spec\\.ts$",
   "transform": {
-    "^.+\\.(t|j)s$": "ts-jest"
+    "^.+\\.(t|j)s$": [
+      "@swc/jest",
+      {
+        "jsc": {
+          "parser": {
+            "syntax": "typescript",
+            "decorators": true,
+            "dynamicImport": true
+          },
+          "transform": {
+            "legacyDecorator": true,
+            "decoratorMetadata": true
+          },
+          "target": "es2021"
+        }
+      }
+    ]
   },
   "collectCoverageFrom": ["**/*.(t|j)s"],
   "coverageDirectory": "./coverage",
